encapsulated the card img tag in a div

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   <main>
 
     <article class="card">
-      <img src="assets//images/image-equilibrium.jpg" alt="A glass cube with red and blue reflections, standing on one of its edges." class="card__image">
+      <div class="card__img-container">
+        <img src="assets//images/image-equilibrium.jpg" alt="A glass cube with red and blue reflections, standing on one of its edges." class="card__img-container__img">
+      </div>
 
       <div class="card__body">
         <h1 class="card__body__heading highlight">Equilibrium #3429</h1>
